--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* ul {
+  column-count: 2;
+  columns: 2;
+}
+.card {
+  display: flex;
+  flex-direction: row;
+} */
